--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,8 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11703898.md#1" target="_blank">“加拿大鹅”新招 让人体验寒冷 不卖现货</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11703898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/goose-150x120.jpg" align ="left"></a>加拿大羽绒服品牌“加拿大鹅”（Canada Goose）在多伦多怡陶碧谷的CF Sherway Gardens Mall购物中心新开了一家旗舰店。最奇特的是，这家店竟然不向顾客提供可以立即买走的货品，而是让顾客体验冰雪世界。如果顾客想买看中的羽绒服，可在店里上网购买，衣服当晚送货到家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11703953.md#1" target="_blank">康明凯被关北京一年 国际组织再吁放人</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11703953.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/Capture-5-150x120.jpg" align ="left"></a>因华为财务官孟晚舟在温哥华被抓而被捕的加拿大前外交官康明凯（Michael Kovrig），在北京已被关押了近一年。近日，国际危机组织多位主席联名撰文，再次呼吁中共放人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703718.md#1" target="_blank">范冰冰赴美为好莱坞影片配音 身材发福引热议</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703718.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/VCG111126431515_meitu_1-150x120.jpg" align ="left"></a>去年卷入逃税风波的大陆女星范冰冰，12月4日现身北京机场，准备前往美国洛杉矶为好莱坞影片《355》配音。不知是否因获准复出而受到许多粉丝热情送行并心情大好，一向注重保暖的她，此次似乎忘了拉上外套的拉链，让眼尖的网友发现她身材发福，肚子明显凸起，引发热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703881.md#1" target="_blank">中国A股上市公司业绩差 多家恐三年连亏</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703881.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1602201826042403-150x120.jpg" align ="left"></a>截至目前，中国A股市场有超过数十家上市公司存在连续三年全年业绩亏损的风险，已经有数家公司股价跌至低于面值，市场预计A股市场的低迷走势将持续。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 6:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703940.md#1" target="_blank">姆钦：谈判在进行中 美方不被人为期限束缚</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MU0OC-150x120.jpg" align ="left"></a>美国财政部长史蒂芬·姆钦（Steven Mnuchin）周四（12月5日）表示，与中方的贸易谈判进展顺利；但他也表示，美国不会被任何人为的期限束缚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 6:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703462.md#1" target="_blank">送子上学途中遭绑架 哈尔滨母亲被判刑4年</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703462.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2014-08-10-homeless-e1569594401687-700x366-150x120.jpg" align ="left"></a>黑龙江省哈尔滨市法轮功学员林金丽今年4月24日送孩子上学的路上被警察绑架、构陷，非法判刑4年。林金丽已上诉到哈尔滨市中级法院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703819.md#1" target="_blank">美澳财团欲收购菲律宾战略船厂 对抗中共</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703819.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1024px-NAS_Cubi_Point_and_NS_Subic_Bay-150x120.jpg" align ="left"></a>美国私人股本公司Cerberus Capital Management和澳大利亚造船商Austal联手，已正式竞购菲律宾最大的苏比克造船厂，旨在对抗中共在该地区的扩张。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703488.md#1" target="_blank">【新闻看点】基因编辑再疑造假 贺建奎哪去了</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703488.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/181128033830100311-150x120.jpg" align ="left"></a>今年年初，《麻省理工学院技术评论（MIT Technology Review）》收到了贺建奎的近5000字研究原稿，并在前天（12月3日）公开了原稿摘要。多名专家表示，贺建奎“明显没有达到自己的目标”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703462.md#1" target="_blank">送子上学途中遭绑架 哈尔滨母亲被判刑4年</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703462.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2014-08-10-homeless-e1569594401687-700x366-150x120.jpg" align ="left"></a>黑龙江省哈尔滨市法轮功学员林金丽今年4月24日送孩子上学的路上被警察绑架、构陷，非法判刑4年。林金丽已上诉到哈尔滨市中级法院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703496.md#1" target="_blank">【新闻看点】北京战狼式外交 加速孤立于世界</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703496.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140247431758-150x120.jpg" align ="left"></a>距离12月15日美国提高中国商品关税的时间还有10天，今天（12月5日）中共口风放软了。中共商务部发言人高峰表示，如果中美双方达成第一阶段协议，应该相应降低关税。中方突然放软身段，与前几天的强硬表现大不相同。有知情人向彭博社透露，第一阶段协议可能在12月15日美方提高关税前完成。川普对美中谈判表达悲观之后，昨天表示美中谈判进展“非常顺利”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703689.md#1" target="_blank">对民企能不捕的不捕 中共最高检言论遭轰</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg" align ="left"></a>据中共官媒报导，中共最高检长张军3日在参加最高检开放日活动时声称要“保护民营企业合法权益”，提出“对涉嫌犯罪的民营企业负责人能不捕的不捕，能不诉的不诉，能缓刑的缓刑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703602.md#1" target="_blank">【热点互动】251事件会成为华为的滑铁卢？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703602.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dd8865fa144798_ttl7dayQN6_d00e5415efdd629e-150x120.jpg" align ="left"></a>华为近日爆出前员工李洪元251事件，引舆论哗然。251事件会成为华为的滑铁卢？中共会放弃华为吗？此外，习近平幕僚称中共已走投无路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:12 AM							</td></tr>
@@ -36,10 +40,6 @@
 晏忠诚，1960年5月出生，陕西白河人，1978年至2009年，历任农十师181团青年2连班长，二营八连职工、副连长、指导员、连长、一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700918.md#1" target="_blank">广东八旬法轮功学员林作英面临非法庭审</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700918.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-2-150x120.jpg" align ="left"></a>广东省广州市天河区八旬法轮功学员林作英于7月9日外出时，被广州市公安局公共交通分局警察绑架，非法关押到广州市第一看守所。构陷她的案卷已转到广州市海珠区法院，法院拟定于12月12日对她进行非法庭审。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702539.md#1" target="_blank">工行前高管被逮捕 传潜规则32名女下属</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702539.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/gu-guoming-150x120.jpg" align ="left"></a>大陆工商银行上海市分行原党委书记、行长顾国明涉嫌受贿一案，移送检方起诉。近日，顾国明被以涉嫌受贿罪逮捕。其被指涉嫌受贿犯罪，数额特别巨大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702627.md#1" target="_blank">高以翔猝逝 浙江卫视《追我吧》永久停播</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020718061487-150x120.jpg" align ="left"></a>今天（12月5日），有消息称，浙江卫视将永久停播《追我吧》节目。此前台湾艺人高以翔在录制此节目时不幸猝逝。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702722.md#1" target="_blank">澳洲成立委员会 查外国势力藉社交媒体干政</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702722.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/c098732f9da5c7128ae86118aeb6418a-150x120.jpg" align ="left"></a>澳大利亚正在多方面采取措施，来防止中共渗透和保护国家安全。12月5日澳洲宣布成立新的参议员委员会，着手调查外国势力透过脸书、推特、微信等社群媒体平台干涉澳洲政治的情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:06 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702300.md#1" target="_blank">大陆数百万“蓝嘴唇”病人靠吃伟哥续命</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702300.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/04/1312271502051528-150x120.jpg" align ="left"></a>大陆年仅8岁的河南许昌女孩小雅（化名）每天要靠吃“伟哥”（也被叫做“西地那非”，是俗称的壮阳药）维持生命，不是电影情节，而是真实的故事，触动了很多人的神经。12月5日，澎湃新闻的长篇报导，曝光大陆有数百万像小雅一样、靠“伟哥”类药物续命的病人群体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702339.md#1" target="_blank">分析：大陆鲍鱼为何卖出白菜价</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702339.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1903250746132378-600x389-150x120.jpg" align ="left"></a>“软黄金”鲍鱼近期卖出白菜价且让养殖户普遍陷于亏损，引发外界关注。那么，到底是什么原因导致今年鲍鱼价格大跌呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703304.md#1" target="_blank">中国社科院金融所书记被查 曾任中纪委检查员</a><br></h3>中国社会科学院金融研究所党委书记、副所长王立民，日前被查。他被指“颇具背景”，曾在中共中央纪委、重庆任职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700408.md#1" target="_blank">公主岭新生监狱电刑“约束带”害法轮功学员</a><br></h3>吉林省公主岭新生监狱使用电刑加“约束带” 残忍迫害法轮功学员，逼迫他们放弃修炼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
